# mise-monodep-plugin

./: CHANGELOG.md  Cargo.toml  README.md  metadata.lua  mise.toml  package.json  release-please-config.json
.github/workflows/: ci.yml  release.yml
hooks/: available.lua  env_keys.lua  post_install.lua  pre_install.lua
lib/: fs.lua
src/: cli.rs  dedup.rs  engine.rs  main.rs  manifest.rs  models.rs  pm.rs
tests/: integration_test.rs
