[package]
name = "monodep"
version = "0.1.1"
edition = "2024"
description = "Monorepo dependency deduplication for mise-managed workspaces"
license = "MIT"

[[bin]]
name = "monodep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
walkdir = "2"
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
